Fixed site on mobile devices
Fixed #24

--- a/public/css/amrbundle.css
+++ b/public/css/amrbundle.css
@@ -1230,11 +1230,6 @@ tbody tr:nth-child(odd) th {
     src: url('fonts/amiri-regular.eot?') format('eot'), url('fonts/amiri-regular.woff') format('woff'), url('fonts/amiri-regular.ttf') format('truetype');
 }
 
-.sidebar {
-    width: 16rem;
-    padding: 0;
-}
-
 .sidebar-nav {
     margin-bottom: 0;
 }
@@ -1250,10 +1245,6 @@ nav a img {
 }
 
 .container {
-}
-
-.content {
-    margin-left: 18rem;
 }
 
 .profilePic {
